--- a/termbox2-hs.cabal
+++ b/termbox2-hs.cabal
@@ -32,7 +32,7 @@ common warnings
 library
     import:           warnings
     exposed-modules:  Termbox2
-    build-depends:    base ^>=4.16.0.0,
+    build-depends:    base,
                       mtl
     hs-source-dirs:   src
     default-language: GHC2021
@@ -53,5 +53,5 @@ test-suite termbox2-hs-test
     main-is:          Main.hs
 
     build-depends:
-        base ^>=4.16.0.0,
+        base,
         termbox2-hs
