--- a/termbox2-hs.cabal
+++ b/termbox2-hs.cabal
@@ -13,7 +13,7 @@ description:
   but will be before @1.0@.
 
 name:               termbox2-hs
-version:            0.2.0.2
+version:            0.3.0.0
 license:            AGPL-3.0-or-later
 license-file:       LICENSE
 synopsis:           Bindings to termbox2
@@ -32,8 +32,7 @@ common warnings
 library
     import:           warnings
     exposed-modules:  Termbox2
-    build-depends:    base,
-                      mtl
+    build-depends:    base, transformers
     hs-source-dirs:   src
     default-language: GHC2021
     include-dirs: lib
